Cut down Sales Center text to a more readable size. Used Grammarly to fix errors.

--- a/src/assets/styles/_general.scss
+++ b/src/assets/styles/_general.scss
@@ -39,6 +39,10 @@ ol ol {
   margin-top: 1rem;
 }
 
+li {
+  margin-bottom: .75rem;
+}
+
 @media only screen and (max-width: 800px) {
   body {
     font-size: 16px;
